Launch commit. Small CSS fixes to be made.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <h3 class="soleil-extrabold topic-heading-text">FRONT END DEVELOPER RESUME</h3>
                         <p class="soleil-regular pt-3">Download a .pdf file of my current front end developer resume.</p>
                         <div class="download-button">
-                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="#">DOWNLOAD</a>
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="./pdf/Nicholas_Fazzolari_Front_End_Developer_Resume.pdf" target="_blank">DOWNLOAD</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <h3 class="soleil-extrabold topic-heading-text">DIGITAL DESIGN PORTFOLIO</h3>
                         <p class="soleil-regular pt-3">Download a .pdf file of my current design portfolio.</p>
                         <div class="download-button">
-                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="#">DOWNLOAD</a>
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="./pdf/Nicholas_Fazzolari_Design_Work_Collection.pdf" target="_blank">DOWNLOAD</a>
                         </div>
                     </div>
                 </div>
@@ -160,17 +160,17 @@
             <div class="col-sm pb-3">
                 <div class="row h-100 align-items-center">
                     <div class="col-4 text-center">
-                        <a href="#">
+                        <a href="https://github.com/NickersF" target="_blank">
                             <img id="gitHubImg" src="./img/icon_GitHub_Grey.svg" alt="GitHub Logo" width="50%">
                         </a>
                     </div>
                     <div class="col-4 text-center">
-                        <a href="#">
+                        <a href="https://codepen.io/nickfazzpdx" target="_blank">
                             <img id="codePenImg" src="./img/icon_CodePen_Grey.svg" alt="CodePen Logo" width="50%">
                         </a>
                     </div>
                     <div class="col-4 text-center">
-                        <a href="#">
+                        <a href="https://www.behance.net/NickFazzolariPDX" target="_blank">
                             <img id="behanceImg" src="./img/icon_Behance_Grey.svg" alt="Behance Logo" width="50%">
                         </a>
                     </div>
@@ -197,9 +197,9 @@
                     Feel free to email me regarding business opportunities and employment via email
                     at:
                 </p>
-                <span class="soleil-extrabold email-link-custom-style">
-                    <a href="mailto:nickfazzpdx@gmail.com">nickfazzpdx@gmail.com</a>
-                </span>
+                <div class="download-button">
+                    <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="mailto:nickfazzpdx@gmail.com">EMAIL ME</a>
+                </div>
             </div>
             <!-- <div class="col-sm">Style guide</div> -->
         </div>
