--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
                     designed and implemented in the last two years. Each project showcase serves as a an overview which
                     gives insight into the company or product alongside technical and design details on the implemenation.
                     Links to source code repositories to each projects are provided so that visitors can look at the codebase alongside
-                    project structure for insight into my development workflow.  
+                    project structure for insight into my development workflow.
                 </p>
             </div>
         </div>
@@ -102,6 +102,9 @@
                             in mind I partnered with the owner to develop a simple, fast, and to-the-point website which serves the
                             purpose of getting people to the bar for fun, and showcases the visual feel of the bar using an Instagram feed.
                         </p>
+                        <div class="download-button">
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="http://www.star-bar-rocks.com/" target="_blank">VISIT STAR BAR SITE</a>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -175,6 +178,9 @@
                             to establish a consistent feel. The website is designed mobile-first to
                             deliver a fast, lightweight browsing experience on mobile devices.
                         </p>
+                        <div class="download-button">
+                            <a class="soleil-extrabold d-inline-block rempadder-1 rounded-sm mt-3" href="https://bar.blackwaterpdx.com/" target="_blank">VISIT BLACK WATER BAR SITE</a>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
