Added favicon and fixed typos.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Portfolio of Nicholas Fazzolari - Front End Web Developer and Digital Designer</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Custom CSS -->
@@ -154,7 +160,7 @@
                     Leveraging externally hosted developer and design showcase sites is an efficient and
                     collaborative way for me to share small side projects and large projects to a broad
                     audience and create connections with other front-end developers and web designers.
-                    Feel free to check out the sites linked to the right to explore my work 
+                    Feel free to check out the sites linked to the right to explore my work.
                 </p>
             </div>
             <div class="col-sm pb-3">
