--- a/work.html
+++ b/work.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Custom CSS -->
@@ -81,7 +87,7 @@
                         <h5 class="soleil-extrabold topic-heading-text">DESIGN TOOLS</h5>
                         <ul class="pt-3">
                             <li>Adobe Illustrator</li>
-                            <li>Adobe Photoshop/li>
+                            <li>Adobe Photoshop</li>
                             <li>Paper Prototype</li>
                         </ul>
                         <h5 class="soleil-extrabold topic-heading-text">FRAMEWORKS AND BACKEND</h5>
@@ -155,7 +161,7 @@
                         <h5 class="soleil-extrabold topic-heading-text">DESIGN TOOLS</h5>
                         <ul class="pt-3">
                             <li>Adobe Illustrator</li>
-                            <li>Adobe Photoshop/li>
+                            <li>Adobe Photoshop</li>
                             <li>Paper Prototype</li>
                         </ul>
                         <h5 class="soleil-extrabold topic-heading-text">FRAMEWORKS AND BACKEND</h5>
